<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.mvdr.adventofcode</groupId>
    <artifactId>adventofcode</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Advent of Code Solutions Parent Project</name>
    <packaging>pom</packaging>

    <modules>
        <module>adventofcode-common</module>
        <module>adventofcode-2015</module>
        <module>adventofcode-2016</module>
        <module>adventofcode-2017</module>
        <module>adventofcode-2018</module>
        <module>adventofcode-2019</module>
        <module>adventofcode-2020</module>
        <module>adventofcode-2021</module>
        <module>adventofcode-2022</module>
        <module>adventofcode-2023</module>
        <module>adventofcode-2024</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    
        <!-- Java version -->
        <java.version>24</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <kotlin.jvm.target>23</kotlin.jvm.target> <!-- the Kotlin Maven Plugin does not yet support Java 24 as of version 2.1.21; should be supported in 2.2 -->

        <!-- dependency versions -->
        <commons-codec.version>1.18.0</commons-codec.version>
        <commons-collections.version>4.5.0</commons-collections.version>
        <commons-lang.version>3.17.0</commons-lang.version>
        <commons-math.version>3.6.1</commons-math.version>
        <jackson.version>2.19.0</jackson.version>
        <jgrapht.version>1.5.2</jgrapht.version>
        <junit.version>5.12.2</junit.version>
        <kotlin.version>2.1.21</kotlin.version>
        <kotlin-logging.version>7.0.7</kotlin-logging.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <slf4j.version>2.0.17</slf4j.version>
        <z3-turnkey.version>4.14.0</z3-turnkey.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- sibling modules -->
            <dependency>
                <groupId>nl.mvdr.adventofcode</groupId>
                <artifactId>adventofcode-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>nl.mvdr.adventofcode</groupId>
                <artifactId>adventofcode-common</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
            </dependency>
        
            <!-- Kotlin standard library -->
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-stdlib-jdk8</artifactId>
                <version>${kotlin.version}</version>
            </dependency>

            <!-- logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.oshai</groupId>
                <artifactId>kotlin-logging-jvm</artifactId>
                <version>${kotlin-logging.version}</version>
            </dependency>

            <!-- graph algorithms -->
            <dependency>
                <groupId>org.jgrapht</groupId>
                <artifactId>jgrapht-core</artifactId>
                <version>${jgrapht.version}</version>
            </dependency>

            <!-- StringUtils and other general helper classes -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- mathematical equation solver-->
            <dependency>
                <groupId>tools.aqua</groupId>
                <artifactId>z3-turnkey</artifactId>
                <version>${z3-turnkey.version}</version>
            </dependency>

            <!-- unit testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-test</artifactId>
                <version>${kotlin.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <forkCount>4</forkCount>
                        <reuseForks>true</reuseForks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jetbrains.kotlin</groupId>
                    <artifactId>kotlin-maven-plugin</artifactId>
                    <version>${kotlin.version}</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <sourceDirs>
                                    <source>src/main/kotlin</source>
                                </sourceDirs>
                            </configuration>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <phase>test-compile</phase>
                            <goals>
                                <goal>test-compile</goal>
                            </goals>
                            <configuration>
                                <sourceDirs>
                                    <source>src/test/kotlin</source>
                                </sourceDirs>
                            </configuration>
                        </execution>
                    </executions>
                    <configuration>
                        <jvmTarget>${kotlin.jvm.target}</jvmTarget>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
